set github deployment to railway

--- a/.github/workflows/deploy-github.yml
+++ b/.github/workflows/deploy-github.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }} # Ensure this is set in GitHub Secrets
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }} # Optional: Set if you have a specific project
-        run: railway up --detach --service pacific-playfulness
+        run: railway up --detach --service vivacious-mindfulness
