--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Railway
 on:
   push:
     branches:
-      - master # Change this to your default branch if it's not 'main'
+      - main # Change this to your default branch if it's not 'main'
   workflow_dispatch:
 
 jobs:
